--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "compile": "babel src -d static",
-    "watch": "babel src -d static -watch"
+    "build": "webpack",
+    "compile": "./node_modules/.bin/babel src -d static",
+    "watch": "./node_modules/.bin/babel src -d static -watch"
   },
   "author": "asklim",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.2.5",
+    "babel-loader": "^8.0.5",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
@@ -19,11 +22,19 @@
     "http-errors": "~1.6.2",
     "mongoose": "^5.3.15",
     "morgan": "~1.9.0",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1"
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^5.12.0",
+    "eslint-plugin-react": "^7.12.3",
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1"
   }
 }
