--- a/package.json
+++ b/package.json
@@ -20,20 +20,24 @@
     "ejs": "~2.5.7",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "isomorphic-fetch": "^2.2.1",
     "mongoose": "^5.3.15",
     "morgan": "~1.9.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "serve-favicon": "^2.5.0"
+    "serve-favicon": "^2.5.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.12.0",
     "eslint-plugin-react": "^7.12.3",
+    "prop-types": "^15.6.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
   }
