--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "css-loader": "^2.1.0",
     "eslint": "^5.12.0",
     "eslint-plugin-react": "^7.12.3",
     "prop-types": "^15.6.2",
+    "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
   }
