Simple Menu with Bootstrap

--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-loader": "^8.0.5",
+    "bootstrap": "^4.2.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
@@ -21,10 +25,14 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "isomorphic-fetch": "^2.2.1",
+    "jquery": "^3.3.1",
     "mongoose": "^5.3.15",
     "morgan": "~1.9.0",
+    "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-icons": "^3.3.0",
+    "react-router-dom": "^4.3.1",
     "serve-favicon": "^2.5.0",
     "uuid": "^3.3.2"
   },
@@ -38,7 +46,14 @@
     "css-loader": "^2.1.0",
     "eslint": "^5.12.0",
     "eslint-plugin-react": "^7.12.3",
+    "node-sass": "^4.11.0",
+    "postcss-loader": "^3.0.0",
+    "precss": "^4.0.0",
     "prop-types": "^15.6.2",
+    "react-bootstrap": "^0.32.4",
+    "react-router": "^4.3.1",
+    "react-router-bootstrap": "^0.24.4",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
