--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-loader": "^8.0.5",
-    "bootstrap": "^4.2.1",
+    "bootstrap": "^3.4.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
@@ -46,6 +46,7 @@
     "css-loader": "^2.1.0",
     "eslint": "^5.12.0",
     "eslint-plugin-react": "^7.12.3",
+    "file-loader": "^3.0.1",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
