--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   "license": "ISC",
   "keywords": ["rsis", "heroku", "rsis web app"],
   "engines": {
-    "node": "~10.x",
-    "npm": "~6.6.0"
+    "node": "10.x",
+    "npm": "6.x"
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
