--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "scripts": {
     "start": "node bin/www.js",
+    "forever": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 --killSignal=SIGINT bin/www.js && forever list",
     "start2": "npm run compile && node static/www.js",
     "build": "webpack",
     "buildnm": "webpack && nodemon",
@@ -47,6 +48,7 @@
     "react-dom": "^16.7.0",
     "react-icons": "^3.3.0",
     "react-router-dom": "^4.3.1",
+    "react-router-hash-link": "^1.2.1",
     "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
     "uuid": "^3.3.2"
