api/routes in different files

--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "private": true,
   "scripts": {
     "start": "node bin/www.js",
+    "nm": "nodemon",
     "forever": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 --killSignal=SIGINT bin/www.js && forever list",
     "start2": "npm run compile && node static/www.js",
+    "bundleserverdev": "webpack --config webpack.serverdev.js",
+    "startserverdev": "node static/server.bundle.js",
     "build": "webpack",
-    "buildnm": "webpack && nodemon",
+    "buildnm": "webpack && npm run nm",
     "test": "npm run test:imports",
     "test:imports": "mocha \"./imports/**/*.spec.js\"",
     "compile": "node_modules/.bin/babel bin/www.js --out-dir static --source-map",
@@ -36,12 +39,16 @@
     "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-jwt": "^5.3.1",
     "history": "^4.7.2",
     "http-errors": "~1.6.2",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.3.15",
     "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
@@ -65,7 +72,9 @@
     "eslint": "^5.12.0",
     "eslint-plugin-react": "^7.12.3",
     "file-loader": "^3.0.1",
-    "mocha": "*",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
+    "mocha": "^6.0.2",
     "node-sass": "^4.11.0",
     "postcss-loader": "^3.0.0",
     "precss": "^4.0.0",
@@ -76,7 +85,8 @@
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.28.4",
-    "webpack-cli": "^3.2.1"
+    "webpack-cli": "^3.2.1",
+    "webpack-node-externals": "^1.7.2"
   },
   "nodemonConfig": {
     "delay": "2000",
