move www.js to server folder

--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "rsis (R Stock-In System) (on MERN)",
   "private": true,
   "scripts": {
-    "start": "node bin/www.js",
+    "startHeroku": "node static/server.bundle.js",
+    "start": "node server/www.js",
     "nm": "nodemon",
-    "forever": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 --killSignal=SIGINT bin/www.js && forever list",
+    "forever": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 --killSignal=SIGINT static/server.bundle.js && forever list",
     "start2": "npm run compile && node static/www.js",
-    "bundleserverdev": "webpack --config webpack.serverdev.js",
-    "startserverdev": "node static/server.bundle.js",
+    "bundleServerDev": "webpack --config webpack.serverdev.js",
+    "bundleServerWeb": "webpack --config webpack.serverdev.js",
     "build": "webpack",
     "buildnm": "webpack && npm run nm",
     "test": "npm run test:imports",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@babel/runtime": "^7.4.3",
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/react-fontawesome": "^0.1.4",
@@ -64,6 +66,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/plugin-transform-runtime": "^7.4.3",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
