ProcurementBoard get data from MongoDB via middleware request

--- a/package.json
+++ b/package.json
@@ -3,24 +3,23 @@
   "version": "0.0.3",
   "description": "rsis (R Stock-In System) (on MERN)",
   "private": true,
-  "homepage" : "https://rsis-webapp.herokuapp.com",
-  "scripts" : 
-  {
-    "/1/" :  "*******   for Heroku    *******",
+  "homepage": "https://rsis-webapp.herokuapp.com",
+  "scripts": {
+    "/1/": "*******   for Heroku    *******",
     "start": "node server/www.js",
     "build": "node scripts/build.js",
-
-    "/2/" : "*******  for development *******",
+    "/2/": "*******  for development *******",
     "build:dev": "node scripts/devbuild.js",
     "start:srv": "node static/server.bundle.js",
     "start2": "npm run compile && node static/www.js",
     "build:wp": "webpack",
-    "build:nm": "webpack && npm run nm",    
+    "build:nm": "webpack && npm run nm",
     "bundleServerDev": "webpack --config webpack.serverdev.js",
-    "bundleServerWeb": "webpack --config webpack.serverdev.js",    
+    "bundleServerWeb": "webpack --config webpack.serverdev.js",
     "forever": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 --killSignal=SIGINT static/server.bundle.js && forever list",
     "test": "npm run test:imports",
     "test:imports": "mocha \"./imports/**/*.spec.js\"",
+    "test:work": "mocha \"./imports/**/work*.spec.js\"",
     "compile": "node_modules/.bin/babel server/www.js --out-dir static --source-map",
     "watch": "./node_modules/.bin/babel src -d static -watch"
   },
@@ -64,7 +63,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.3.15",
+    "mongoose": "^5.5.10",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
