--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/markerclustererplus": "^2.1.33",
     "babel-loader": "^8.0.5",
     "bfj": "^6.1.1",
+    "body-parser": "^1.19.0",
     "chartist": "^0.10.1",
     "classnames": "^2.2.6",
     "cookie-parser": "~1.4.3",
@@ -54,7 +55,7 @@
     "dotenv": "^6.2.0",
     "dotenv-expand": "^5.1.0",
     "ejs": "~2.5.7",
-    "express": "~4.16.0",
+    "express": "^4.16.0",
     "express-jwt": "^5.3.1",
     "file-loader": "^3.0.1",
     "fs-extra": "^7.0.1",
