move utils to src/lib, config to src

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "rsis (R Stock-In System) (on MERN)",
   "private": true,
   "homepage": "https://rsis-webapp.herokuapp.com",
+  "directories": {
+    "lib": "/imports"
+  },
   "scripts": {
     "/1/": "*******   for Heroku    *******",
     "start": "node server/www.js",
@@ -12,17 +15,15 @@
     "build:dev": "node scripts/devbuild.js",
     "start:srv": "node static/server.bundle.js",
     "start2": "npm run compile && node static/www.js",
-    "build:wp": "webpack",
-    "build:nm": "webpack && npm run nm",
+    "compile": "node_modules/.bin/babel server/www.js --out-dir static --source-map",
     "bundleServerDev": "webpack --config webpack.serverdev.js",
     "bundleServerWeb": "webpack --config webpack.serverdev.js",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install",
     "forever": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 --killSignal=SIGINT static/server.bundle.js && forever list",
-    "test": "npm run test:imports",
-    "test:imports": "mocha \"./imports/**/*.spec.js\"",
-    "test:work": "mocha \"./imports/**/work*.spec.js\"",
-    "compile": "node_modules/.bin/babel server/www.js --out-dir static --source-map",
-    "watch": "./node_modules/.bin/babel src -d static -watch"
+    "test": "npm run test:lib",
+    "test:lib": "mocha \"./src/lib/**/*.spec.js\"",
+    "test:rsis": "mocha \"./src/lib/utils/rsis/*.spec.js\"",
+    "test:work": "mocha \"./src/lib/**/work*.spec.js\""
   },
   "author": "asklim",
   "license": "ISC",
@@ -42,37 +43,27 @@
     "@material-ui/icons": "^3.0.2",
     "@types/googlemaps": "^3.30.19",
     "@types/markerclustererplus": "^2.1.33",
-    "babel-loader": "^8.0.5",
     "bfj": "^6.1.1",
     "body-parser": "^1.19.0",
     "chartist": "^0.10.1",
     "classnames": "^2.2.6",
     "cookie-parser": "~1.4.3",
-    "css-loader": "^2.1.0",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "dotenv-expand": "^5.1.0",
     "ejs": "~2.5.7",
     "express": "^4.16.0",
     "express-jwt": "^5.3.1",
-    "file-loader": "^3.0.1",
     "fs-extra": "^7.0.1",
     "history": "^4.7.2",
     "http-errors": "~1.6.2",
     "isomorphic-fetch": "^2.2.1",
-    "jquery": "^3.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.10",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "perfect-scrollbar": "^1.4.0",
-    "popper.js": "^1.14.6",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.6.0",
-    "postcss-safe-parser": "^4.0.1",
-    "precss": "^4.0.0",
     "react": "^16.8.6",
     "react-chartist": "^0.13.3",
     "react-dev-utils": "^8.0.0",
@@ -84,10 +75,7 @@
     "react-swipeable-views": "^0.13.1",
     "request": "^2.88.0",
     "resolve": "^1.10.0",
-    "sass-loader": "^7.1.0",
     "serve-favicon": "^2.5.0",
-    "style-loader": "^0.23.1",
-    "url-loader": "^1.1.2",
     "uuid": "^3.3.2"
   },
   "//": "chai & mocha to '*' - last version",
@@ -99,13 +87,16 @@
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
+    "babel-loader": "^8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^8.0.0",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chai": "*",
+    "css-loader": "^2.1.0",
     "eslint": "^5.16.0",
     "eslint-loader": "^2.1.2",
     "eslint-plugin-react": "^7.12.4",
+    "file-loader": "^3.0.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-beta.5",
     "mini-css-extract-plugin": "^0.6.0",
@@ -113,12 +104,20 @@
     "node-sass": "^4.12.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pnp-webpack-plugin": "^1.4.3",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.6.0",
+    "postcss-safe-parser": "^4.0.1",
+    "precss": "^4.0.0",
     "prop-types": "^15.6.2",
     "react-bootstrap": "^0.32.4",
     "react-router": "^4.3.1",
     "react-router-bootstrap": "^0.24.4",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "terser-webpack-plugin": "^1.2.3",
     "typescript": "^3.4.5",
+    "url-loader": "^1.1.2",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.3.1",
