--- a/package.json
+++ b/package.json
@@ -65,6 +65,8 @@
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chartist": "^0.10.1",
     "classnames": "^2.2.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "colors": "^1.4.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
     "css-loader": "^3.2.0",
@@ -134,7 +136,6 @@
   "devDependencies": {
     "@babel/cli": "^7.7.0",
     "@hot-loader/react-dom": "^16.11.0",
-    "clean-webpack-plugin": "^3.0.0",
     "eslint": "^6.7.1",
     "eslint-loader": "^3.0.2",
     "eslint-plugin-react": "^7.16.0",
