--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsis-web",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "rsis (R Stock-In System) (on MERN)",
   "private": true,
   "homepage": "https://rsis-webapp.herokuapp.com",
@@ -83,7 +83,6 @@
     "html-webpack-plugin": "^4.0.0-beta.8",
     "http-errors": "^1.7.3",
     "is-wsl": "^2.1.1",
-    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "messaging-api-viber": "^0.8.2",
     "mini-css-extract-plugin": "^0.6.0",
@@ -117,7 +116,7 @@
     "react-swipeable-views": "^0.13.3",
     "request": "^2.88.0",
     "resolve": "^1.13.1",
-    "resolve-url-loader": "^3.1.1",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "^8.0.0",
     "serve-favicon": "^2.5.0",
     "style-loader": "^1.0.1",
@@ -135,12 +134,13 @@
   "//": " '*' - last version",
   "devDependencies": {
     "@babel/cli": "^7.7.0",
+    "@babel/eslint-parser": "^7.12.1",
     "@hot-loader/react-dom": "^16.11.0",
-    "eslint": "^6.7.1",
+    "eslint": "^7.18.0",
     "eslint-loader": "^3.0.2",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.3.0",
-    "jest": "^24.9.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jest": "^26.6.3",
     "webpack-dev-middleware": "^3.7.2",
     "webpack-hot-middleware": "^2.25.0"
   },
