--- a/package.json
+++ b/package.json
@@ -9,19 +9,27 @@
   },
   "scripts": {
     "production": "NODE_ENV=production npm run start",
-    "/1/": "*******   for Heroku    *******",
+    "/1 - for Heroku/": "*******   for Heroku    *******",
     "start": "node server/www.js",
-    "build": "node scripts/build.js",
-    "/2/": "*******  for development *******",
+    "build": "node scripts/bundle-builder.js",
+    "/2 - bundle building & start/": "**************",
+    "start:prod": "NODE_ENV=production npm run start",
+    "bb:prod": "node scripts/bundle-builder.js",
+    "bb:dev": "node scripts/bundle-builder.js --development-config --stats",
+    "/3 - HMR Debug/": "    *** for hot module replacement development ***",
+    "start:hmr": "DEV_MODE=HotModuleReplacement npm run start",
     "debug": "NODE_ENV=development DEBUG=api:*,view:* npm run start",
     "debug:all": "NODE_ENV=development DEBUG=* npm run start",
-    "build:dev": "node scripts/devbuild.js",
+    "/4 - webpack builder/": "     *** for 'static' build development ***",
+    "build:wp:prod": "webpack --config config/webpack.prod.js",
+    "build:wp:dev": "webpack --config config/webpack.dev.js",
     "start2": "npm run compile && node static/www.js",
     "compile": "node_modules/.bin/babel server/www.js --out-dir static --source-map",
     "bundleServerDev": "webpack --config webpack.serverdev.js",
     "bundleServerWeb": "webpack --config webpack.serverdev.js",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install",
     "forever": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 --killSignal=SIGINT static/server.bundle.js && forever list",
+    "/7 -/": "                               ***  for testing ***",
     "jest:srv": "jest server/**/*.test.js",
     "jest:src": "jest ./src/**",
     "test": "npm run test:lib",
@@ -41,25 +49,28 @@
     "npm": "6.x"
   },
   "dependencies": {
-    "@babel/core": "^7.7.0",
+    "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/polyfill": "^7.7.0",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
-    "@babel/runtime": "^7.7.1",
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "^4.5.1",
     "@svgr/webpack": "^4.3.3",
     "@types/googlemaps": "^3.38.0",
     "@types/markerclustererplus": "^2.1.33",
+    "@types/react": "^16.14.2",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.5",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
     "bfj": "^7.0.0",
     "body-parser": "^1.19.0",
     "browserslist": "^4.7.2",
+    "buffer": "^6.0.3",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
     "chartist": "^0.10.1",
@@ -67,9 +78,12 @@
     "clean-webpack-plugin": "^3.0.0",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.3",
+    "copy-webpack-plugin": "^7.0.0",
     "cors": "^2.8.5",
-    "css-loader": "^3.2.0",
-    "debug": "*",
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.2.0",
+    "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "ejs": "^3.0.0",
@@ -79,22 +93,24 @@
     "fs-extra": "^8.0.1",
     "history": "^4.10.1",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^4.0.0-beta.8",
+    "html-webpack-plugin": "^5.0.0-beta.1",
     "http-errors": "^1.7.3",
+    "https-browserify": "^1.0.0",
     "is-wsl": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "messaging-api-viber": "^1.0.4",
-    "mini-css-extract-plugin": "^0.6.0",
+    "mini-css-extract-plugin": "^1.3.5",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
     "node-sass": "^4.13.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "path-browserify": "^1.0.1",
     "perfect-scrollbar": "^1.4.0",
     "pnp-webpack-plugin": "^1.5.0",
+    "postcss": "^8.2.4",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^3.0.0",
+    "postcss-loader": "^4.0.0",
     "postcss-normalize": "^8.0.1",
     "postcss-preset-env": "^6.7.0",
     "postcss-safe-parser": "^4.0.1",
@@ -103,13 +119,11 @@
     "react": "^16.12.0",
     "react-bootstrap": "^0.32.4",
     "react-chartist": "^0.13.3",
-    "react-dev-utils": "^9.1.0",
+    "react-dev-utils": "^11.0.1",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
     "react-hot-loader": "^4.12.18",
     "react-icons": "^3.8.0",
-    "react-router": "^5.1.0",
-    "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-swipeable-views": "^0.13.3",
@@ -118,80 +132,34 @@
     "resolve-url-loader": "^3.1.2",
     "sass-loader": "^8.0.0",
     "serve-favicon": "^2.5.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.1.1",
     "style-loader": "^1.0.1",
     "supports-color": "^7.1.0",
     "terser-webpack-plugin": "^2.3.8",
+    "url": "^0.11.0",
     "url-loader": "^3.0.0",
+    "util": "^0.12.3",
     "uuid": "^3.3.3",
     "viber-bot": "^1.0.14",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-manifest-plugin": "^2.2.0",
-    "webpack-node-externals": "^1.7.2",
-    "workbox-webpack-plugin": "^4.3.1"
+    "webpack": "^5.11.0",
+    "webpack-cli": "^4.3.10",
+    "webpack-manifest-plugin": "^3.0.0",
+    "webpack-merge": "^5.7.3",
+    "workbox-webpack-plugin": "^6.1.0"
   },
   "//": " '*' - last version",
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
+    "@babel/cli": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
     "@hot-loader/react-dom": "^16.11.0",
     "eslint": "^7.18.0",
-    "eslint-loader": "^3.0.2",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.4.1",
     "jest": "^26.6.3",
-    "webpack-dev-middleware": "^3.7.2",
+    "webpack-dev-middleware": "^3.7.3",
     "webpack-hot-middleware": "^2.25.0"
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jest-environment-jsdom-fourteen",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [
-      "/mnt/e/codes/devias-rmd2/src"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ]
   },
   "nodemonConfig": {
     "delay": "2000",
