--- a/package.json
+++ b/package.json
@@ -56,14 +56,15 @@
     "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
-    "@material-ui/core": "^4.3.2",
-    "@material-ui/icons": "^4.5.1",
+    "@babel/runtime": "^7.12.5",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@svgr/webpack": "^4.3.3",
     "@types/googlemaps": "^3.38.0",
     "@types/markerclustererplus": "^2.1.33",
     "@types/react": "^16.14.2",
     "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-named-asset-import": "^0.3.4",
     "babel-preset-react-app": "^9.0.2",
@@ -153,7 +154,7 @@
     "@babel/cli": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
     "@hot-loader/react-dom": "^16.11.0",
-    "eslint": "^7.18.0",
+    "eslint": "^7.19.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.4.1",
