launch ViberBot via ngrok

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   ],
   "engines": {
     "node": "14.x",
-    "npm": "6.x"
+    "npm": "7.x"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
@@ -57,6 +57,8 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
     "@babel/runtime": "^7.12.5",
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@svgr/webpack": "^4.3.3",
@@ -74,7 +76,7 @@
     "buffer": "^6.0.3",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "chartist": "^0.10.1",
+    "chartist": "^0.11.4",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
     "colors": "^1.4.0",
@@ -87,8 +89,8 @@
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
-    "ejs": "^3.0.0",
-    "express": "^4.17.1",
+    "ejs": "^3.1.5",
+    "express": "^5.0.0-alpha.8",
     "express-jwt": "^5.3.1",
     "file-loader": "^5.0.0",
     "fs-extra": "^8.0.1",
@@ -104,34 +106,35 @@
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
     "node-sass": "^4.13.1",
+    "object-inspect": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path-browserify": "^1.0.1",
     "perfect-scrollbar": "^1.4.0",
     "pnp-webpack-plugin": "^1.5.0",
     "postcss": "^8.2.4",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "postcss-loader": "^4.0.0",
-    "postcss-normalize": "^8.0.1",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^4.2.0",
+    "postcss-normalize": "^9.0.0",
     "postcss-preset-env": "^6.7.0",
-    "postcss-safe-parser": "^4.0.1",
+    "postcss-safe-parser": "^5.0.2",
     "precss": "^4.0.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
+    "react": "^17.0.1",
     "react-bootstrap": "^0.32.4",
-    "react-chartist": "^0.13.3",
+    "react-chartist": "^0.14.3",
     "react-dev-utils": "^11.0.1",
-    "react-dom": "^16.12.0",
+    "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-hot-loader": "^4.12.18",
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
-    "react-swipeable-views": "^0.13.3",
+    "react-swipeable-views": "^0.13.9",
     "request": "^2.88.0",
     "resolve": "^1.13.1",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^8.0.0",
+    "sass-loader": "^10.1.1",
     "serve-favicon": "^2.5.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.1",
@@ -142,7 +145,7 @@
     "url-loader": "^3.0.0",
     "util": "^0.12.3",
     "uuid": "^3.3.3",
-    "viber-bot": "^1.0.14",
+    "viber-bot": "^1.0.16",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.3.10",
     "webpack-manifest-plugin": "^3.0.0",
@@ -153,12 +156,13 @@
   "devDependencies": {
     "@babel/cli": "^7.12.10",
     "@babel/eslint-parser": "^7.12.1",
-    "@hot-loader/react-dom": "^16.11.0",
+    "@hot-loader/react-dom": "^17.0.1",
     "eslint": "^7.19.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.4.1",
     "jest": "^26.6.3",
+    "ngrok": "^3.4.0",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-hot-middleware": "^2.25.0"
   },
