--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsis-web",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "rsis (R Stock-In System) (on MERN)",
   "private": true,
   "homepage": "https://rsis-webapp.herokuapp.com",
@@ -17,7 +17,9 @@
     "bb:prod": "node scripts/bundle-builder.js",
     "bb:dev": "node scripts/bundle-builder.js --development-config --stats",
     "/3 - HMR Debug/": "    *** for hot module replacement development ***",
-    "start:hmr": "DEV_MODE=HotModuleReplacement npm run start",
+    "hmr:start": "DEV_MODE=HotModuleReplacement npm run start",
+    "hmr:debug": "DEV_MODE=HotModuleReplacement npm run debug",
+    "hmr:all": "DEV_MODE=HotModuleReplacement npm run debug:all",
     "debug": "NODE_ENV=development DEBUG=api:*,view:* npm run start",
     "debug:all": "NODE_ENV=development DEBUG=* npm run start",
     "/4 - webpack builder/": "     *** for 'static' build development ***",
@@ -102,10 +104,10 @@
     "is-wsl": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "messaging-api-viber": "^1.0.4",
-    "mini-css-extract-plugin": "^1.3.5",
+    "mini-css-extract-plugin": "^1.3.6",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
-    "node-sass": "^4.13.1",
+    "node-sass": "^5.0.0",
     "object-inspect": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
