--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsis-web",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "rsis (R Stock-In System) (on MERN)",
   "private": true,
   "homepage": "https://rsis-webapp.herokuapp.com",
@@ -61,6 +61,7 @@
     "@babel/runtime": "^7.12.5",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "@svgr/webpack": "^4.3.3",
@@ -96,7 +97,7 @@
     "express-jwt": "^5.3.1",
     "file-loader": "^5.0.0",
     "fs-extra": "^8.0.1",
-    "history": "^4.10.1",
+    "history": "^5.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^5.0.0-beta.1",
     "http-errors": "^1.7.3",
@@ -130,7 +131,7 @@
     "react-google-maps": "^9.4.5",
     "react-hot-loader": "^4.12.18",
     "react-icons": "^3.8.0",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^1.2.2",
     "react-swipeable-views": "^0.13.9",
     "request": "^2.88.0",
@@ -165,6 +166,7 @@
     "eslint-webpack-plugin": "^2.4.1",
     "jest": "^26.6.3",
     "ngrok": "^3.4.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-hot-middleware": "^2.25.0"
   },
