--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsis-web",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "description": "rsis (R Stock-In System) (on MERN)",
   "private": true,
   "homepage": "https://rsis-webapp.herokuapp.com",
@@ -47,8 +47,7 @@
     "rsis web app"
   ],
   "engines": {
-    "node": "14.x",
-    "npm": "7.x"
+    "node": "16.x"
   },
   "dependencies": {
     "@babel/core": "^7.12.10",
@@ -64,10 +63,11 @@
     "@loadable/component": "^5.14.1",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
-    "@svgr/webpack": "^4.3.3",
+    "@svgr/webpack": "^6.1.2",
     "@types/googlemaps": "^3.38.0",
     "@types/markerclustererplus": "^2.1.33",
     "@types/react": "^16.14.2",
+    "asklim": "git+https://asklim@github.com/asklim/asklim.git",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.2.2",
     "babel-plugin-module-resolver": "^4.1.0",
@@ -75,7 +75,7 @@
     "babel-preset-react-app": "^9.0.2",
     "bfj": "^7.0.0",
     "body-parser": "^1.19.0",
-    "browserslist": "^4.7.2",
+    "browserslist": "^4.19.1",
     "buffer": "^6.0.3",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
@@ -88,13 +88,13 @@
     "cors": "^2.8.5",
     "crypto-browserify": "^3.12.0",
     "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.2.0",
+    "css-minimizer-webpack-plugin": "^3.3.1",
     "debug": "^4.3.1",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "ejs": "^3.1.5",
     "express": "^5.0.0-alpha.8",
-    "express-jwt": "^5.3.1",
+    "express-jwt": "^6.0.0",
     "file-loader": "^5.0.0",
     "fs-extra": "^8.0.1",
     "history": "^5.0.0",
@@ -105,10 +105,10 @@
     "is-wsl": "^2.1.1",
     "jsonwebtoken": "^8.5.1",
     "messaging-api-viber": "^1.0.4",
-    "mini-css-extract-plugin": "^1.3.6",
+    "mini-css-extract-plugin": "^2.4.5",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^7.0.1",
     "object-inspect": "^1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -126,7 +126,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^0.32.4",
     "react-chartist": "^0.14.3",
-    "react-dev-utils": "^11.0.1",
+    "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.12.18",
     "react-icons": "^3.8.0",
@@ -136,7 +136,7 @@
     "request": "^2.88.0",
     "resolve": "^1.13.1",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "^12.4.0",
     "serve-favicon": "^2.5.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.1",
@@ -164,7 +164,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^2.4.1",
     "jest": "^26.6.3",
-    "ngrok": "^3.4.0",
+    "ngrok": "^4.0.0",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-dev-middleware": "^3.7.3",
     "webpack-hot-middleware": "^2.25.0"
