--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rsis-web",
-  "version": "0.1.7",
+  "version": "0.2.0",
   "description": "rsis (R Stock-In System) (on MERN)",
   "private": true,
   "homepage": "https://rsis-webapp.herokuapp.com",
@@ -34,6 +34,7 @@
     "/7 -/": "                               ***  for testing ***",
     "jest:srv": "jest server/**/*.test.js",
     "jest:src": "jest ./src/**",
+    "lint": "npx eslint .",
     "test": "npm run test:lib",
     "test:lib": "mocha \"./src/lib/**/*.spec.js\"",
     "test:rsis": "mocha \"./src/lib/rsis/*.spec.js\"",
@@ -50,13 +51,13 @@
     "node": "16.x"
   },
   "dependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.21.4",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/preset-react": "^7.18.6",
     "@babel/runtime": "^7.12.5",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
@@ -68,18 +69,18 @@
     "@types/markerclustererplus": "^2.1.33",
     "@types/react": "^16.14.2",
     "asklim": "git+https://asklim@github.com/asklim/asklim.git",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.2.2",
-    "babel-plugin-module-resolver": "^4.1.0",
-    "babel-plugin-named-asset-import": "^0.3.4",
-    "babel-preset-react-app": "^9.0.2",
+    "axios": "^1.3.5",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-named-asset-import": "^0.3.8",
+    "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.0",
-    "body-parser": "^1.19.0",
-    "browserslist": "^4.19.1",
+    "browserslist": "^4.21.5",
     "buffer": "^6.0.3",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "^2.2.0",
-    "chartist": "^0.11.4",
+    "chartist": "^0.10.1",
     "classnames": "^2.2.6",
     "clean-webpack-plugin": "^3.0.0",
     "colors": "^1.4.0",
@@ -93,8 +94,9 @@
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "ejs": "^3.1.5",
-    "express": "^5.0.0-alpha.8",
-    "express-jwt": "^6.0.0",
+    "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
     "file-loader": "^5.0.0",
     "fs-extra": "^8.0.1",
     "history": "^5.0.0",
@@ -103,71 +105,69 @@
     "http-errors": "^1.7.3",
     "https-browserify": "^1.0.0",
     "is-wsl": "^2.1.1",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "messaging-api-viber": "^1.0.4",
     "mini-css-extract-plugin": "^2.4.5",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
-    "node-sass": "^7.0.1",
+    "node-sass": "^8.0.0",
     "object-inspect": "^1.9.0",
-    "passport": "^0.4.0",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "path-browserify": "^1.0.1",
     "perfect-scrollbar": "^1.4.0",
     "pnp-webpack-plugin": "^1.5.0",
-    "postcss": "^8.2.4",
+    "postcss": "^8.4.21",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^4.2.0",
-    "postcss-normalize": "^9.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-safe-parser": "^5.0.2",
+    "postcss-loader": "^7.2.4",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^8.3.1",
+    "postcss-safe-parser": "^6.0.0",
     "precss": "^4.0.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^0.32.4",
-    "react-chartist": "^0.14.3",
+    "react-chartist": "^0.14.4",
     "react-dev-utils": "^12.0.0",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.12.18",
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.2.0",
     "react-router-hash-link": "^1.2.2",
-    "react-swipeable-views": "^0.13.9",
-    "request": "^2.88.0",
     "resolve": "^1.13.1",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^12.4.0",
+    "sass-loader": "^13.2.2",
     "serve-favicon": "^2.5.0",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.1.1",
-    "style-loader": "^1.0.1",
+    "style-loader": "^3.3.2",
     "supports-color": "^7.1.0",
     "terser-webpack-plugin": "^2.3.8",
     "url": "^0.11.0",
-    "url-loader": "^3.0.0",
-    "util": "^0.12.3",
-    "uuid": "^3.3.3",
+    "url-loader": "^4.1.1",
+    "util": "^0.12.5",
+    "uuid": "^9.0.0",
     "viber-bot": "^1.0.16",
-    "webpack": "^5.11.0",
-    "webpack-cli": "^4.3.10",
-    "webpack-manifest-plugin": "^3.0.0",
-    "webpack-merge": "^5.7.3",
-    "workbox-webpack-plugin": "^6.1.0"
+    "webpack": "^5.79.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-manifest-plugin": "^5.0.0",
+    "webpack-merge": "^5.8.0",
+    "workbox-webpack-plugin": "^6.5.4"
   },
   "//": " '*' - last version",
   "devDependencies": {
-    "@babel/cli": "^7.12.10",
-    "@babel/eslint-parser": "^7.12.1",
+    "@babel/cli": "^7.21.0",
+    "@babel/eslint-parser": "^7.21.3",
     "@hot-loader/react-dom": "^17.0.1",
-    "eslint": "^7.19.0",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-webpack-plugin": "^2.4.1",
-    "jest": "^26.6.3",
+    "eslint": "^8.38.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^4.0.1",
+    "jest": "^29.5.0",
     "ngrok": "^4.0.0",
     "webpack-bundle-analyzer": "^4.4.0",
-    "webpack-dev-middleware": "^3.7.3",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-dev-middleware": "^6.0.2",
+    "webpack-hot-middleware": "^2.25.3"
   },
   "nodemonConfig": {
     "delay": "2000",
