start migrating to TS

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-# Static Bootstrap map files
-/static/bootstrap/css/*.css.map
+dist/
 static/
 
+# Static Bootstrap map files
+/static/bootstrap/css/*.css.map
 # Logs
 logs
 *.log
