--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
     "hmr:all": "DEV_MODE=HotModuleReplacement npm run debug:all",
     "debug": "NODE_ENV=development DEBUG=api:*,view:* npm run start",
     "debug:all": "NODE_ENV=development DEBUG=* npm run start",
-    "/4 - webpack builder/": "     *** for 'static' build development ***",
+    "/4 - webpack builder/": "     *** for 'dist' build development ***",
     "build:wp:prod": "webpack --config config/webpack.prod.js",
     "build:wp:dev": "webpack --config config/webpack.dev.js",
-    "start2": "npm run compile && node static/www.js",
-    "compile": "node_modules/.bin/babel server/www.js --out-dir static --source-map",
+    "start2": "npm run compile && node dist/server/www.js",
+    "compile": "node_modules/.bin/babel server/www.js --out-dir dist/server --source-map",
     "bundleServerDev": "webpack --config webpack.serverdev.js",
     "bundleServerWeb": "webpack --config webpack.serverdev.js",
     "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install",
-    "forever": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 --killSignal=SIGINT static/server.bundle.js && forever list",
+    "forever": "forever start --fifo --minUptime 1000 --spinSleepTime 1000 --killSignal=SIGINT dist/server/server.bundle.js && forever list",
     "/7 -/": "                               ***  for testing ***",
     "jest:srv": "jest server/**/*.test.js",
     "jest:src": "jest ./src/**",
@@ -67,7 +67,8 @@
     "@svgr/webpack": "^6.1.2",
     "@types/googlemaps": "^3.38.0",
     "@types/markerclustererplus": "^2.1.33",
-    "@types/react": "^16.14.2",
+    "@types/react": "^17.0.58",
+    "@types/react-dom": "^17.0.19",
     "asklim": "git+https://asklim@github.com/asklim/asklim.git",
     "axios": "^1.3.5",
     "babel-eslint": "^10.1.0",
@@ -143,6 +144,7 @@
     "style-loader": "^3.3.2",
     "supports-color": "^7.1.0",
     "terser-webpack-plugin": "^2.3.8",
+    "typescript": "^5.0.4",
     "url": "^0.11.0",
     "url-loader": "^4.1.1",
     "util": "^0.12.5",
@@ -192,7 +194,7 @@
       "node_modules/*/**",
       "node_modules/**",
       "src/**",
-      "static/**"
+      "dist/**"
     ]
   },
   "browserslist": [
